fixed layout shift from type effect

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -382,7 +382,7 @@ hero image and over style
     animation-iteration-count: infinite;
     transform-origin: 70% 70%;
     display: inline-block;
-	font-size: 2rem;
+	font-size: 30px;
 }
 @keyframes wave-animation{
 	0% {
