--- a/src/styles/project-details.module.scss
+++ b/src/styles/project-details.module.scss
@@ -15,8 +15,6 @@
   }
   p {
     margin-top: 15px;
-    line-height: 1.8;
-    letter-spacing: 0em;
   }
   a:first-of-type{
       padding: 15px 25px;
